// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan, create, and configure production-ready Azure Kubernetes Service (AKS) clusters. Covers Day-0 checklist, SKU selection (Automatic vs Standard), networking options (private API server, Azure CNI Overlay, egress configuration), security (workload identity, Azure Policy, Key Vault CSI driver, Deployment Safeguards), and operations (monitoring, upgrade strategy, autoscaling, cost analysis, node pools). WHEN: provision AKS cluster, design AKS networking, choose AKS SKU, secure AKS, set up AKS, pod rightsizing, pod over-provisioning, CPU requests, memory requests, enable CAS, Cluster Autoscaler, idle nodes, node utilization, CAS profile, scale-in, Spot VM, Spot node pool, batch workloads, eviction, cost analysis add-on, namespace cost, cost spike, anomaly.",
  "extractedKeywords": [
    "add-on",
    "aks",
    "analysis",
    "anomaly",
    "automatic",
    "autoscaler",
    "autoscaling",
    "azure",
    "batch",
    "checklist",
    "choose",
    "cli",
    "cluster",
    "clusters",
    "configuration",
    "configure",
    "container",
    "cost",
    "covers",
    "create",
    "day-0",
    "deploy",
    "deployment",
    "design",
    "diagnostic",
    "driver",
    "egress",
    "enable",
    "entra",
    "eviction",
    "function",
    "identity",
    "idle",
    "key vault",
    "kubernetes",
    "mcp",
    "memory",
    "monitor",
    "monitoring",
    "namespace",
    "networking",
    "node",
    "nodes",
    "observability",
    "operations",
    "options",
    "over-provisioning",
    "overlay",
    "plan",
    "policy",
    "pool",
    "pools",
    "private",
    "production-ready",
    "profile",
    "provision",
    "requests",
    "rightsizing",
    "safeguards",
    "scale-in",
    "secure",
    "security",
    "selection",
    "server",
    "service",
    "spike",
    "spot",
    "standard",
    "strategy",
    "upgrade",
    "utilization",
    "vault",
    "when",
    "workload",
    "workloads",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "add-on",
  "aks",
  "analysis",
  "anomaly",
  "automatic",
  "autoscaler",
  "autoscaling",
  "azure",
  "batch",
  "checklist",
  "choose",
  "cli",
  "cluster",
  "clusters",
  "configuration",
  "configure",
  "container",
  "cost",
  "covers",
  "create",
  "day-0",
  "deploy",
  "deployment",
  "design",
  "diagnostic",
  "driver",
  "egress",
  "enable",
  "entra",
  "eviction",
  "function",
  "identity",
  "idle",
  "key vault",
  "kubernetes",
  "mcp",
  "memory",
  "monitor",
  "monitoring",
  "namespace",
  "networking",
  "node",
  "nodes",
  "observability",
  "operations",
  "options",
  "over-provisioning",
  "overlay",
  "plan",
  "policy",
  "pool",
  "pools",
  "private",
  "production-ready",
  "profile",
  "provision",
  "requests",
  "rightsizing",
  "safeguards",
  "scale-in",
  "secure",
  "security",
  "selection",
  "server",
  "service",
  "spike",
  "spot",
  "standard",
  "strategy",
  "upgrade",
  "utilization",
  "vault",
  "when",
  "workload",
  "workloads",
]
`;
